--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -376,4 +376,18 @@
     <string name="disable_no_sim_title">Disable no sim icon</string> 
     <string name="disable_no_sim_summary">Disable no simcard icon if no sim present</string> 
 
+    <!-- [CHAR LIMIT=80]-->
+    <string name="fp_swipe_to_dismiss_notifications_title">Swipe fingerprint left or right to dismiss notifications</string>
+    <string name="fp_swipe_to_dismiss_notifications_pref_title">Swipe fingerprint left or right</string>
+    <!--  [CHAR LIMIT=160]-->
+    <string name="fp_swipe_to_dismiss_notifications_summary">To dismiss your notifications, swipe left or right on the fingerprint sensor on the back of your phone.</string>
+    <!-- [CHAR LIMIT=60] -->
+    <string name="fingerprint_swipe_to_dismiss_suggestion_title">Dismiss notifications quickly</string>
+    <!-- [CHAR LIMIT=60] -->
+    <string name="fingerprint_swipe_to_dismiss_suggestion_summary">Swipe left or right on the fingerprint sensor</string>
+
+    <!-- Fingerprint quick pulldown -->
+    <string name="fp_quick_pulldown_title">Fingerprint quick pulldown</string>
+    <string name="fp_quick_pulldown_summary">Expand the quick settings panel with only one swipe on the fingerprint sensor.</string>
+
 </resources>
