--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -327,9 +327,10 @@
     <string name="ambient_display_bottom_info_weather">Brief weather info</string>
 
     <!-- Font picker -->
-    <string name="font_picker_title">Font</string>
+    <string name="font_picker_title">Font Manager</string>
     <string name="font_picker_toast">Please wait, applying fonts.</string>
     <string name="disable_fonts_installed_title">Font picker is unavailable to avoid conflicts with Substratum. Uninstall it if you wish to use the font picker.</string>
+    <string name="font_picker_progress">Applying your desired font\u2026</string>
 
     <!-- Custom light color -->
     <string name="light_customization">Led light notification</string>
