Option to Disable Blank network signal icons on Msim [2/2] Source - https://github.com/ZeNiXxX/android_packages_apps_Settings/commit/48540fe46ebf963cea60f1f59eac3c1f3196b150#diff-e51794177b90ed694e682d5dc467f497

--- a/res/xml/sim_settings.xml
+++ b/res/xml/sim_settings.xml
@@ -34,6 +34,18 @@
         <Preference android:key="sim_sms"
             android:title="@string/sms_messages_title" />
 
+        <com.xtended.xtensions.preferences.SystemSettingSwitchPreference
+            android:key="no_sim_cluster_switch"
+            android:title="@string/no_sim_cluster_switch_title"
+            android:summary="@string/no_sim_cluster_switch_summary"
+            android:defaultValue="false"/>
+
+        <com.xtended.xtensions.preferences.SystemSettingSwitchPreference
+            android:key="disable_no_sim"
+            android:title="@string/disable_no_sim_title"
+            android:summary="@string/disable_no_sim_summary"
+            android:defaultValue="false"/>
+
     </PreferenceCategory>
 
 
