--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -316,4 +316,12 @@
     <string name="display_rotation_180_title">180 degrees</string>
     <string name="display_rotation_270_title">270 degrees</string>
 
+    <!-- no network switch --> 
+    <string name="no_sim_cluster_switch_title">No sim network hide</string> 
+    <string name="no_sim_cluster_switch_summary">Hide the network bar if the subscription of sim is inactive and disabled. If sim is not disabled, this switch will not work</string> 
+ 
+    <!-- no sim icon switch --> 
+    <string name="disable_no_sim_title">Disable no sim icon</string> 
+    <string name="disable_no_sim_summary">Disable no simcard icon if no sim present</string> 
+
 </resources>
