--- a/res/values/xtended_styles.xml
+++ b/res/values/xtended_styles.xml
@@ -24,5 +24,9 @@
     <style name="TabAppTheme" parent="Theme.AppCompat">
     </style>
 
+    <style name="HeaderInfo" parent="@android:style/TextAppearance.Material.Display1">
+        <item name="android:textSize">24sp</item>
+    </style>
+
 </resources>
 
