Add Redmi 4A in Official List.

--- a/res/values/xtended_strings.xml
+++ b/res/values/xtended_strings.xml
@@ -76,6 +76,8 @@
     <string name="device5_description">Ananwoy Nandi aka ananwoy</string>
     <string name="device_6">Xiaomi Redmi 3S | land</string>
     <string name="device6_description">Ronak aka RonAk47</string>
+    <string name="device_7">Xiaomi Redmi 4A | rolex</string>
+    <string name="device7_description">Yousef Algadri</string>
     <string name="spt_1">ZeNiXxX</string>
     <string name="spt_2">SKULSHADY</string>
     <string name="spt_3">HolyAngel</string>
